2010-12-14  Werner Koch  <wk@g10code.com>

	* gpgcemgr.c (wchar_to_utf8, utf8_to_wchar, set_show_registry): New.
	(main): Add commands --gpgme-log and --gnupg-log.

2010-11-17  Marcus Brinkmann  <mb@g10code.com>

	* vasprintf.c (int_vasprintf) [HAVE_W32CE_SYSTEM && _MSC_VER]:
	Just use a fixed size buffer, as va_copy is not easy to fake.

	* gpgcedev.c (struct pipeimpl_s): Add member monitor_rvid.
	(struct monitor_s, monitor_t): New types.
	(monitor_table, monitor_table_size): New static variables.
	(pipeimpl_new): Initialize monitor_rvid.
	(allocate_monitor): New function.
	(make_pipe): Also try the monitor_table if the opnctx_table fails.
	(monitor): Renamed to ...
	(monitor_main): ... this.  Remove from monitor_table when done.
	(assign_rvid): Add to monitor table when creating monitor thread.

2010-11-15  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (GPG_Init): Read debug settings.

	* gpgcemgr.c (enable_debug, enable_log): New.
	(main): Add options --enable-debug, --disable-debug, --enable-log,
	--disable-log.

2010-11-12  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (DEVCTX_VALUE): Rename to PIPECTX_VALUE.
	(LOGCTX_VALUE): New.
	(allocate_opnctx): Add arg IS_LOG.
	(logimpl_t): New.
	(openctx_t): Add field IS_LOG.
	(struct logcontrol): New.
	(enable_debug, enable_logging): New.
	(log_debug): Make use of the ENABLE_DEBUG flag.
	(create_log_id): New.
	(logimpl_new, logimpl_unref, logimpl_flush, assert_logimpl): New.
	(GPG_Init): Check for GPG2 device.
	(GPG_Deinit): Close log stream.
	(GPG_Open): Implement log device.
	(GPG_Read): Return EOF for the GPG2 device
	(GPG_Write): Implement GPG2 device.
	(dllmain): Init logcontrol CS.

2010-11-01  Werner Koch  <wk@g10code.com>

	* assuan-socket.c (_assuan_sock_bind): Replace open/fdopen by
	CreateFile for building with MSC for W32CE.
	(utf8_to_wchar, MyCreateFile, MyDeleteFile) [W32CE]: New.

2010-11-01  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-socket.c, assuan-uds.c, system.c, assuan-pipe-server.c,